--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
                     input.value='';
                 }
             })
+            socket.on('chat message',function(msg){
+                let item = document.createElement('li');
+                console.error('hello to you',msg);
+                item.textContent = msg;
+                messages.appendChild(item);
+                window.scrollTo(0, document.body.scrollHeight);
+            })
         </script>
     </body>
 </html>
